simplify interface for providing lazy properties